tests/test_files/default/neg/bad_store_mtdc.s
	store mtdc 0				; FAIL: attempt to store in MTDC
	halt
